salesforce_sfdx/main/default/objects/Case/fields/Age_in_House__c.field-meta.xml
<CustomField>
    <fullName>Age_in_House__c</fullName>
    <description>This field calculates the age of the case based on closed date and created date</description>
    <formula>IF( NOT( ISBLANK( ClosedDate ) ) , FLOOR(ClosedDate - CreatedDate),  FLOOR(NOW() -  CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in House</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>