salesforce_sfdx/main/default/objects/Case/fields/Age_in_Location__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Location__c</fullName>
    <description>Field to calculate the age of the case under an owner</description>
    <formula>TODAY() -  Owner_Change_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>