salesforce_sfdx/main/default/objects/Case/fields/AgentDepartment__c.field-meta.xml
<CustomField>
    <fullName>AgentDepartment__c</fullName>
    <formula>TEXT(CreatedBy.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Department</label>
    <type>Text</type>
</CustomField>