salesforce_sfdx/main/default/objects/Case/fields/AgentSupervisor__c.field-meta.xml
<CustomField>
    <fullName>AgentSupervisor__c</fullName>
    <formula>HYPERLINK("/"&amp;CreatedBy.ManagerId , CreatedBy.Manager.FirstName &amp; " "&amp; CreatedBy.Manager.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Supervisor</label>
    <type>Text</type>
</CustomField>