salesforce_sfdx/main/default/objects/Case/fields/Authentication_not_needed__c.field-meta.xml
<CustomField>
    <fullName>Authentication_not_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authentication not needed</label>
    <type>Checkbox</type>
</CustomField>