salesforce_sfdx/main/default/objects/Case/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <description>Field to capture what Business the Case is about</description>
    <label>Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Advantage</fullName>
            </value>
            <value>
                <fullName>Health Advantage</fullName>
            </value>
            <value>
                <fullName>First Source Access</fullName>
            </value>
            <value>
                <fullName>USAble NonBranded</fullName>
            </value>
            <value>
                <fullName>FEP</fullName>
            </value>
            <value>
                <fullName>Blue Card</fullName>
            </value>
            <value>
                <fullName>ABCBS</fullName>
            </value>
            <value>
                <fullName>BARB</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>Blue2</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>BCSC</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>