salesforce_sfdx/main/default/objects/Case/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <description>Date field to determine when to followup on the case</description>
    <label>Follow Up</label>
    <type>Date</type>
</CustomField>