salesforce_sfdx/main/default/objects/Case/fields/Health_Condition__c.field-meta.xml
<CustomField>
    <fullName>Health_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Condition</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>