salesforce_sfdx/main/default/objects/Case/fields/Health_Condition_Heard__c.field-meta.xml
<CustomField>
    <fullName>Health_Condition_Heard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Condition Heard?</label>
    <type>Checkbox</type>
</CustomField>