salesforce_sfdx/main/default/objects/Case/fields/Inquirer__c.field-meta.xml
<CustomField>
    <fullName>Inquirer__c</fullName>
    <label>Inquirer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>