salesforce_sfdx/main/default/objects/Case/fields/Inquirer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Inquirer_Phone__c</fullName>
    <label>Inquirer Phone</label>
    <type>Phone</type>
</CustomField>