salesforce_sfdx/main/default/objects/Case/fields/Inquirer_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquirer_Type__c</fullName>
    <description>Field to capture the Type of the Inquirer who calls for some Inquiry</description>
    <label>Inquirer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grand Rounds</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Prospective Customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>OPM Appeals</fullName>
            </value>
            <value>
                <fullName>Other Insurance Co</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Internal Staff</fullName>
            </value>
            <value>
                <fullName>Insurance Dept</fullName>
            </value>
            <value>
                <fullName>Group/Division</fullName>
            </value>
            <value>
                <fullName>Gvt Agency</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Blue Plan</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Authorized Person</fullName>
            </value>
            <value>
                <fullName>Agent Broker</fullName>
            </value>
            <value>
                <fullName>Medical Reviews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>