salesforce_sfdx/main/default/objects/Case/fields/Is_Case_Department__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Department__c</fullName>
    <formula>IF( TEXT( $User.Department__c ) == TEXT(Department__c)  , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Department</label>
    <type>Checkbox</type>
</CustomField>