salesforce_sfdx/main/default/objects/Case/fields/Is_Case_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Product_Line__c</fullName>
    <formula>IF(CONTAINS(   $User.User_Product_Line__c ,TEXT( Product_Line__c  )) ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Product Line</label>
    <type>Checkbox</type>
</CustomField>