salesforce_sfdx/main/default/objects/Case/fields/Is_Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Team__c</fullName>
    <formula>OR(IF(CONTAINS( $User.User_Primary_Team__c  ,TEXT( Case_Team__c  )),TRUE,FALSE),
IF(CONTAINS(  $User.User_Secondary_Team__c  ,TEXT( Case_Team__c )),TRUE,FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Team</label>
    <type>Checkbox</type>
</CustomField>