salesforce_sfdx/main/default/objects/Case/fields/isCreatedByMe__c.field-meta.xml
<CustomField>
    <fullName>isCreatedByMe__c</fullName>
    <formula>IF(CreatedById  =  $User.Id ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCreatedByMe</label>
    <type>Checkbox</type>
</CustomField>