salesforce_sfdx/main/default/objects/Case/fields/IsCreatedInLast5Minutes__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedInLast5Minutes__c</fullName>
    <formula>CreatedDate >  DATETIMEVALUE( NOW() - 5/(24*60) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCreatedInLast5Minutes</label>
    <type>Checkbox</type>
</CustomField>