salesforce_sfdx/main/default/objects/Case/fields/isOwnedByMe__c.field-meta.xml
<CustomField>
    <fullName>isOwnedByMe__c</fullName>
    <formula>IF( Owner:User.Id =  $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isOwnedByMe</label>
    <type>Checkbox</type>
</CustomField>