salesforce_sfdx/main/default/objects/Case/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <description>Member Id</description>
    <label>Member Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>