salesforce_sfdx/main/default/objects/Case/fields/MTM_Age__c.field-meta.xml
<CustomField>
    <fullName>MTM_Age__c</fullName>
    <formula>FLOOR(NOW() - CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTM Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>