salesforce_sfdx/main/default/objects/Case/fields/MTM_Flag__c.field-meta.xml
<CustomField>
    <fullName>MTM_Flag__c</fullName>
    <formula>OR(MTM_Team__c, MTM_Reason_Result__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTM Flag</label>
    <type>Checkbox</type>
</CustomField>