salesforce_sfdx/main/default/objects/Case/fields/MTM_Reason_Result__c.field-meta.xml
<CustomField>
    <fullName>MTM_Reason_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MTM Reason Result</label>
    <type>Checkbox</type>
</CustomField>