salesforce_sfdx/main/default/objects/Case/fields/Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Change_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This is a backend field used to calculate the age of the case in a location or for how long the case has been assigned to one owner</description>
    <label>Owner Change Date</label>
    <type>Date</type>
</CustomField>