salesforce_sfdx/main/default/objects/Case/fields/Proactive_Listening_Details__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Listening_Details__c</fullName>
    <label>Proactive Listening Details</label>
    <type>TextArea</type>
</CustomField>