salesforce_sfdx/main/default/objects/Case/fields/Proactive_Listening_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Listening_Outcome__c</fullName>
    <label>Proactive Listening Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferred to Nurse</fullName>
            </value>
            <value>
                <fullName>Transferred to Social Worker</fullName>
            </value>
            <value>
                <fullName>Declined Transfer - No Follow Up</fullName>
            </value>
            <value>
                <fullName>Declined Transfer - Follow Up Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>