salesforce_sfdx/main/default/objects/Case/fields/Proactively_Educated__c.field-meta.xml
<CustomField>
    <fullName>Proactively_Educated__c</fullName>
    <label>Proactively Educated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Vendors</fullName>
            </value>
            <value>
                <fullName>Additional services/Benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>