salesforce_sfdx/main/default/objects/Case/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABCBS</fullName>
            </value>
            <value>
                <fullName>BANA</fullName>
            </value>
            <value>
                <fullName>BARB</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>FEP</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage</fullName>
            </value>
            <value>
                <fullName>BlueCard</fullName>
            </value>
            <value>
                <fullName>ASE/PSE</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>USAble</fullName>
            </value>
            <value>
                <fullName>ABCBS Reg Business</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage/RX</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>SIU</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>