salesforce_sfdx/main/default/objects/Case/fields/Prospective_Member__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospective Member</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>