salesforce_sfdx/main/default/objects/Case/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <formula>IF(TEXT( Inquirer_Type__c ) = "Member",  Reference__r.Member_Exchange_ID__c  , IF(TEXT( Inquirer_Type__c ) = "Provider", Reference__r.NPI__c ,'') )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Id</label>
    <type>Text</type>
</CustomField>