salesforce_sfdx/main/default/objects/Case/fields/Reference_Types__c.field-meta.xml
<CustomField>
    <fullName>Reference_Types__c</fullName>
    <description>Field to capture the Reference of the member</description>
    <label>Reference Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Card Host</fullName>
            </value>
            <value>
                <fullName>Group/Division</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prospective Customer</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>