salesforce_sfdx/main/default/objects/Case/fields/Reopened__c.field-meta.xml
<CustomField>
    <fullName>Reopened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to determine if the case is reopened or not.</description>
    <label>Reopened</label>
    <type>Checkbox</type>
</CustomField>