salesforce_sfdx/main/default/objects/Case/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>This field helps to capture the result for the case. This field is dependent on Reason</description>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Focus Care Comments</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Received in Error</fullName>
            </value>
            <value>
                <fullName>Provider Appeal</fullName>
            </value>
            <value>
                <fullName>Expedited Appeal</fullName>
            </value>
            <value>
                <fullName>Formal Benefit Inquiry</fullName>
            </value>
            <value>
                <fullName>Expedited Formal Benefit Inquiry</fullName>
            </value>
            <value>
                <fullName>Courtesy Review</fullName>
            </value>
            <value>
                <fullName>First Level Appeal</fullName>
            </value>
            <value>
                <fullName>Second Level Appeal</fullName>
            </value>
            <value>
                <fullName>External Review</fullName>
            </value>
            <value>
                <fullName>Report Exempt/Hours</fullName>
            </value>
            <value>
                <fullName>DHS System Issues</fullName>
            </value>
            <value>
                <fullName>Termination Questions</fullName>
            </value>
            <value>
                <fullName>Policy Status</fullName>
            </value>
            <value>
                <fullName>Refund request</fullName>
            </value>
            <value>
                <fullName>Payment/Refund Inquiry</fullName>
            </value>
            <value>
                <fullName>Draft Change/Cancel</fullName>
            </value>
            <value>
                <fullName>N6 Letter Request</fullName>
            </value>
            <value>
                <fullName>E-Billing</fullName>
            </value>
            <value>
                <fullName>Payment by phone issues</fullName>
            </value>
            <value>
                <fullName>Draft Issues</fullName>
            </value>
            <value>
                <fullName>Premium Payment/Delinquent</fullName>
            </value>
            <value>
                <fullName>Surcharge</fullName>
            </value>
            <value>
                <fullName>Appeal/Reconsideration</fullName>
            </value>
            <value>
                <fullName>Military Hold</fullName>
            </value>
            <value>
                <fullName>Check Request</fullName>
            </value>
            <value>
                <fullName>Premium Billing</fullName>
            </value>
            <value>
                <fullName>Rate Increase</fullName>
            </value>
            <value>
                <fullName>QMB Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>