salesforce_sfdx/main/default/objects/Case/fields/SDOH_Heard__c.field-meta.xml
<CustomField>
    <fullName>SDOH_Heard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDOH Heard?</label>
    <type>Checkbox</type>
</CustomField>