salesforce_sfdx/main/default/objects/Case/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exchange CCM Adjustments</fullName>
            </value>
            <value>
                <fullName>Exchange Corrected Claims</fullName>
            </value>
            <value>
                <fullName>Exchange CSR Adjustments</fullName>
            </value>
            <value>
                <fullName>Exchange Escalated NDR Adjustment Issues</fullName>
            </value>
            <value>
                <fullName>Exchange Instate Eligibility</fullName>
            </value>
            <value>
                <fullName>Exchange Instate Re-Review</fullName>
            </value>
            <value>
                <fullName>Exchange Overpayments/Refunds - Claims</fullName>
            </value>
            <value>
                <fullName>Exchange Refunds CSR</fullName>
            </value>
            <value>
                <fullName>Exchange Timely Filing</fullName>
            </value>
            <value>
                <fullName>Exchange WalkThrough Claims</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange CCM Adjustments</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange- Corrected Claims</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange Escalated NDR Adjustment Issues</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange Instate Eligibility</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange Instate Re-Review</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange Overpayments/Refunds - Claims</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange Refunds CSR</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange Walkthrough Claims</fullName>
            </value>
            <value>
                <fullName>Health Advatage Exchange CSR Adjustments</fullName>
            </value>
            <value>
                <fullName>Exchange - ITS Legal Appeals</fullName>
            </value>
            <value>
                <fullName>Exchange CSR ITS Adjustments</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange COB Claims/Adjustments</fullName>
            </value>
            <value>
                <fullName>Exchange ITS B2 Incoming Appeals</fullName>
            </value>
            <value>
                <fullName>Exchange  COB Claims/Adjustments</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange ITS CSR Adjustments</fullName>
            </value>
            <value>
                <fullName>Health Advantage Exchange- ITS Legal Appeals</fullName>
            </value>
            <value>
                <fullName>815 Exchange</fullName>
            </value>
            <value>
                <fullName>Exchange - Membership PCP Update</fullName>
            </value>
            <value>
                <fullName>Exchange - Voice Mail</fullName>
            </value>
            <value>
                <fullName>Exchange Authorizations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>