salesforce_sfdx/main/default/objects/Case/fields/Values_Authenticated__c.field-meta.xml
<CustomField>
    <fullName>Values_Authenticated__c</fullName>
    <label>Values Authenticated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member ID</fullName>
            </value>
            <value>
                <fullName>Date of birth</fullName>
            </value>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
            <value>
                <fullName>Member Name</fullName>
            </value>
            <value>
                <fullName>Last four digits of SSN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>