salesforce_sfdx/main/default/objects/Case/recordTypes/Admission.recordType-meta.xml
<RecordType>
    <fullName>Admission</fullName>
    <active>true</active>
    <businessProcess>Care Requests</businessProcess>
    <description>Record type for notification and approval of an inpatient admission.</description>
    <label>Admission</label>
</RecordType>