salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_Appeal_Complaint.recordType-meta.xml
<RecordType>
    <fullName>CCI_Appeal_Complaint</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allow user to create case of Appeal/Complaint type</description>
    <label>Appeal/Complaint</label>
</RecordType>