salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_Billing_Premiums.recordType-meta.xml
<RecordType>
    <fullName>CCI_Billing_Premiums</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allow user to create case of Billing/Premiums type</description>
    <label>Billing/Premiums</label>
</RecordType>