salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_Claims.recordType-meta.xml
<RecordType>
    <fullName>CCI_Claims</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allows the user to create a case of Claims type</description>
    <label>Claims</label>
</RecordType>