salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_Correspondence.recordType-meta.xml
<RecordType>
    <fullName>CCI_Correspondence</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allows the user to create a case of Correspondence type.</description>
    <label>Correspondence</label>
</RecordType>