salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_Courtesy_Review.recordType-meta.xml
<RecordType>
    <fullName>CCI_Courtesy_Review</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allow user to create case of Courtesy Review type</description>
    <label>Courtesy Review</label>
</RecordType>