salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_Eligibility_Benefits.recordType-meta.xml
<RecordType>
    <fullName>CCI_Eligibility_Benefits</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allow user to create case of Eligibility/Benefits type</description>
    <label>Eligibility/Benefits</label>
</RecordType>