salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_Group_Employer.recordType-meta.xml
<RecordType>
    <fullName>CCI_Group_Employer</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allow user to create case of Group/Employer type</description>
    <label>Group/Employer</label>
</RecordType>