salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_ID_Card_Activation.recordType-meta.xml
<RecordType>
    <fullName>CCI_ID_Card_Activation</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allow user to create case of ID Card Activation type</description>
    <label>ID Card Activation</label>
</RecordType>