salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_Medical_Records.recordType-meta.xml
<RecordType>
    <fullName>CCI_Medical_Records</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allow user to create case of Medical Records type</description>
    <label>Medical Records</label>
</RecordType>