salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_My_Blueprint_Web_Questions.recordType-meta.xml
<RecordType>
    <fullName>CCI_My_Blueprint_Web_Questions</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allow user to create case of My Blueprint/Web Questions type</description>
    <label>My Blueprint/Web Questions</label>
</RecordType>