salesforce_sfdx/main/default/objects/Case/recordTypes/CCI_Other.recordType-meta.xml
<RecordType>
    <fullName>CCI_Other</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>This allows the user to create a case of Other type.</description>
    <label>Other</label>
</RecordType>